--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </body>
   <div class="text-center mt-8">
   <a
-    href="https://your-portfolio-homepage.vercel.app"
+    href="https://portfolio-hgc.vercel.app/"
     class="inline-block bg-blue-500 text-white px-6 py-3 rounded-md hover:bg-blue-700 transition"
   >
     Return to Home
